<resources>
    <string name="app_name">YTU Mezun Android App</string>
    <string name="li_username">Kullanıcı Adı</string>
    <string name="li_input_username">\@kullanici_adi1</string>
    <string name="li_input_password">sifre_1.</string>
    <string name="li_password">Şifre</string>
    <string name="bt_li_login">Giriş</string>
    <string name="bt_li_signup">Kayıt Ol</string>
    <string name="tb_announcements">Duyurular</string>
    <string name="li_welcome">YTÜ Mezun Uygulamasına Hoşgeldiniz!</string>
    <string name="su_name">Ad</string>
    <string name="su_surname">Soyad</string>
    <string name="su_birthdate">Doğum Tarihi</string>
    <string name="su_graduatedate">Mezuniyet Tarihi</string>
    <string name="su_mail">E-posta Adresi</string>
    <string name="su_username">Kullanıcı Adı</string>
    <string name="su_password">Şifre</string>
    <string name="su_password2">Şifrenizi tekrar giriniz</string>
    <string name="su_photo">Fotoğraf</string>
    <string name="su_takephoto">Fotoğraf Ekle</string>
    <string name="pr_profile">Profil</string>
    <string name="su_signup">Kayıt Ol</string>
    <string name="pr_name">Adı</string>
    <string name="pr_surname">Soyadı</string>
    <string name="pr_birthdate">Doğum Tarihi:</string>
    <string name="pr_birthdatedata">01/01/2000</string>
    <string name="pr_graduatedate">Mezuniyet Tarihi:</string>
    <string name="pr_graduatedatedata">01/01/2010</string>
    <string name="pr_mail">E-Posta Adresi:</string>
    <string name="pr_maildata">ornek.ornek@std.yildz.edu.tr</string>
    <string name="pr_username">Kullanıcı Adı:</string>
    <string name="pr_usernamedata">\@admin</string>
    <string name="pr_password">Şifre:</string>
    <string name="pr_passworddata">password</string>
    <string name="mb_profile_text">Profil Ekranı</string>
    <string name="mb_announcement_text">Duyuru Ekranı</string>
</resources>